# lanited_sim

./: README.md
049_cv_ssd/: cv_ssd_corregido.ipynb
kinect_v2/launch/: display.launch  gazebo.launch
kinect_v2/urdf/: kinect_v2.urdf.xacro
lanited/celda/: CMakeLists.txt  package.xml
lanited/eje_ext_description/: CMakeLists.txt  package.xml
lanited/grippers_lanited_description/: CMakeLists.txt  package.xml
lanited/grippers_lanited_description/config/: gazebo_controllers.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml
lanited/grippers_lanited_description/launch/: display.launch  gazebo.launch  ros_controller.launch
lanited/grippers_lanited_description/meshes/: finger_link.STL
lanited/grippers_lanited_description/urdf/: gzplugin_grasp_fix.urdf.xacro  materials.xacro  mimic_fix.urdf.xacro  onrobot_2fg7.gazebo  onrobot_2fg7.trans.xacro  onrobot_2fg7.xacro  onrobot_2fg7_upload.xacro
lanited/lanited/: CMakeLists.txt  package.xml
lanited/multi-robot_description/: CMakeLists.txt  package.xml
lanited/multi-robot_grippers_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
lanited/multi-robot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
moves/: CMakeLists.txt  package.xml
moves/launch/: ns_moveit_api.launch  pose_move.launch  r1_moveit_api.launch  r2_moveit_api.launch
moves/src/: cartesian_node.cpp  moveit_api.cpp  moves_node.cpp  objects.cpp  pose_monitor.cpp  pose_move_node.cpp  r1_moveit_api.cpp  r2_moveit_api.cpp  read_and_move.cpp  read_moves.cpp  robot_model.cpp  visualize_plan.cpp
my_gripper/my_gripper_description/: CMakeLists.txt  package.xml
my_gripper/my_gripper_sim/: CMakeLists.txt  (+1 more)
pick_place/: CMakeLists.txt  package.xml
robot_cell_moveit_config/: .setup_assistant  package.xml
ur2_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur5_gripper_moveit_config/: CMakeLists.txt  package.xml
ur_gripper_moveit_config/: .setup_assistant  package.xml
ur_gripper_sim/: CMakeLists.txt  package.xml
(+273 files in other folders)
