<?xml version="1.0"?>
<package format="2">
  <name>grippers_lanited_description</name>
  <version>0.0.0</version>
<description>The onrobot 2FG7 lanited description package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <maintainer email="sinai.aranda@cidesi.edu.mx.com">Sinaí Aranda</maintainer>



  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <!-- 
  <depend>gazebo_grasp_plugin</depend>
  <depend>roboticsgroup_upatras_gazebo_plugins</depend>
  -->




</package>
